 * Add NumericalMathFunction::[sg]etParameterDescription to access the parameter description
 * Deprecated classes UserDefinedPair, HistogramPair
 * Removed SensitivityAnalysis class
 * Deprecated SLSQP, LBFGS and NelderMead classes in favor of NLopt class
 * Deprecated LAR in favor of LARS

=== Python module ===

=== Miscellaneous ===
 * Improved the computeCDF() method of Normal
 * Add HarrisonMcCabe, BreuschPagan and DurbinWatson tests to test homoskedasticity, autocorrelation of linear regression residuals
 * Add two samples Kolmogorov test
 * Improved the speed of many algorithms based on method binding
 * Added more options to control LHSExperiment and LowDiscrepancyExperiment
 * Improved the IntervalMesher class: now it takes into account the diamond flag
 * Shortened ResourceMap keys to not contain 'Implementation'

=== Bug fixes ===
 * #565 (The SensitivityAnalysis class manages only one single output.)
 * #698 (KernelSmoothing() as a factory)
 * #786 (Bug in sensitivity analysis)
 * #813 (Error when multiplying a Matrix by a SymmetricMatrix)
 * #815 (ConditionedNormalProcess test fails randomly)
 * #820 (Python distribution fails randomly when computing the PDF over a sample)
 * #822 (Incorect Matrix / point operations with cast)
 * #824 (Confusing behavior of NumericalSample::sort)
 * #830 (more optim algos examples)
 * #837 (TruncatedDistribution::setParameter segfaults)
 * #838 (Symmetry of SymmetricMatrix not always enforced)
 * #841 (Better CovarianceModelCollection in Python)
 * #842 (Better ProcessCollection in Python)

== 1.7 release (2016-01-27) == #release-1.7

=== Library ===

==== Major changes ====
 * Optimization API rework
 * New parametrization of covariance models
 * Changed behaviour of ExponentialCauchy
 * KrigingAlgorithm rework

==== New classes ====
 * OptimizationSolver, OptimizationProblem
 * SLSQP, LBFGS, NelderMead optimization algorithms from NLopt
 * DiracCovarianceModel, TensorizedCovarianceModel