@@ -11,6 +11,7 @@ individual contributors:
     Antoine Dumas <dumas@phimeca.com>
     Aurelie Ladier <ladier@phimeca.com>
     Denis Barbier <barbier@imacs.polytechnique.fr>
+    Felipe Aguirre Martinez <aguirre@phimeca.com>
     Ivan Dutka-Malen <ivan.dutka-malen@edf.fr>
     Julien Schueller <schueller@phimeca.com>
     Mathieu Lapointe <lapointe@phimeca.com>
