@@ -2,6 +2,7 @@
 
 from __future__ import print_function
 from openturns import *
+import sys
 
 TESTPREAMBLE()
 
@@ -124,6 +125,15 @@ myFunc = PythonFunction(2, 1, func_sample=a_exec_sample)
 outSample = myFunc(a_sample)
 print(outSample)
 
+print('distributed exec only on a point')
+myFunc = PythonFunction(2, 1, a_exec, n_cpus=None if sys.platform.startswith('win') else -1)
+outSample = myFunc([100., 100.])
+print(outSample)
+
+print('distributed exec only on a sample')
+myFunc = PythonFunction(2, 1, a_exec, n_cpus=None if sys.platform.startswith('win') else -1)
+outSample = myFunc(a_sample)
+print(outSample)
 
 def a_grad(X):
     # wrong but allows to verify
